# Klimapy

./: .gitignore  LICENSE  README.md  import_quickstart.md  pyproject.toml
docs/: BCSD.md  CSM.md  ETCCDI.md  NCtoTIFF.md  PrecipVariability.md  index.md
src/klimapy/: __init__.py
src/klimapy/BCSD/: BCSD.py  __init__.py
src/klimapy/ETCCDI/: ETCCDI.py  __init__.py
src/klimapy/PrecioitationVariablity/: __init__.py  precipvariability.py
src/klimapy/Supporting_Tools/: CSM.py  NCtoTIFF.py  __init__.py
